css/thoroughlyTricked.css
/* Based on CSS seen at github.com/verythorough and
and cssTricks.com */
@import url('https://fonts.googleapis.com/css?family=PT+Sans');
@import url('https://fonts.googleapis.com/css?family=Caveat+Brush'
);

/* who knew!  css can handle variables:; */
:root {
    --lightRock: rgb(194, 186, 172); 
    --darkRock: rgb(76, 77, 75);
    --skyColor: rgb(113, 165, 249);
    --palerSky: rgb(165, 220, 255 );
}

body {
  margin: 0;
  text-align: center;
  font-size: 1rem;
}

body, input {
  color: midnightblue;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", sans-serif;
}

#site-header {
  padding: 0.5em 2%;
  background-color: var(--skyColor);
}

h1 {
  font-weight: lighter;
  font-size: 3em;
  color: var(--palerSky);
  margin: 0.2em;
}

h2 {
  font-weight: normal;
  font-size: 2em;
}

h3 {
  font-weight: 500;
}

header, p {
  color: var(--palerSky);
  font-weight: lighter;
}


/* (1) The exact thing that breaks the FA is imposing a font.*/
/* I got the double .FAB.FA-LINKED IN WORKING and */
/* as soon as you add one font line there it breaks the FA */
/* (2) Anything besides span span span breaks the monoline.*/
/* (3) PULLINg to the right should be doable though.*/
/**/
/**/

#starboard{
  color: yellow;
  font-size: 30px;
  font-family: helvetica, arial, sans-serif;
  /*thisbreaksicon  BUT doesn't implement either*/
}

.tight {
  padding: auto, 0px;

}

span {
  color: var(--lightRock);
  text-align: right;
} /* note SPECIFIC CHILD */

.fab.fa-linkedin { 
  color: var(--lightRock);
  padding-left: 30px;
 }

p span {
  text-align: right;
  margin-left: 16px;
}
/*****footer end**********/

.content {
  background-color: var(--lightRock);
  min-height: 160px; /* TODO units inconsistant... */

}
#site-header {
  background-color: rgb(194, 186, 172);
}

#pond {
  display: flex;
  justify-content: space-around; 
  align-items: center; 
  max-height: 160px;
}

/* Dad !!!!!!!!!!! */
/*******mothballed**/
.bg-image {
  background-image: url("images/dadsEnergy.png");
  /* Full height */
  height: 100%;
  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.blox {
  width: 120px;
  height: 120px;
  margin: 20px auto ;
  display: flex;
  justify-content: center; 
  align-items: center; 
  font-size: 30px;
  color: var(--palerSky);
  background-color: var(--darkRock);
}


/* links           */
/*******************/
a:link {
    color: green;
    background-color: transparent;
    text-decoration: none;
}

a:visited {
    color: pink;
    background-color: transparent;
    text-decoration: none;
}

a:hover {
    color: red;
    background-color: transparent;
    text-decoration: underline;
}

a:active {
    color: yellow;
    background-color: transparent;
    text-decoration: underline;
}

/*The footer of Fontawesome's page was doing some cool #Halloween animations today.  Built from font icons. #css https://fontawesome.com/  */
 "CSS is like some kind of Dark Art." 
(@adamstako on The Changelog podcast)
I agree. #100DaysOfCode

